--- a/ps101/src/main/res/layout/fragment_general_device.xml
+++ b/ps101/src/main/res/layout/fragment_general_device.xml
@@ -105,6 +105,8 @@
         android:hint="10~120"
         android:inputType="number"
         android:maxLength="3"
+        android:textSize="15sp"
+        android:textColor="@color/black_333333"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         app:layout_constraintLeft_toLeftOf="@id/rg_qos"
