--- a/ps101/src/main/res/values/styles.xml
+++ b/ps101/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
 
     <style name="divider_line">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">1px</item>
+        <item name="android:layout_height">0.5dp</item>
         <item name="android:background">@color/grey_b3b3b3</item>
     </style>
 
