更新资源文件，改为引用Ble库

--- a/ps101/src/main/res/xml/file_paths.xml
+++ b/ps101/src/main/res/xml/file_paths.xml
@@ -1,7 +1,7 @@
 <paths>
     <external-path
         name="log"
-        path="LW006/" />
+        path="PS101M/" />
     <external-path
         name="*"
         path="." />
