--- a/ps101/src/main/res/layout/fragment_network.xml
+++ b/ps101/src/main/res/layout/fragment_network.xml
@@ -132,4 +132,24 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         app:layout_constraintTop_toBottomOf="@+id/tvReconnect" />
+
+
+    <TextView
+        android:id="@+id/tvSyncDevices2Cloud"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:background="@drawable/shape_corner_btn_bg"
+        android:clickable="true"
+        android:gravity="center"
+        android:onClick="mainSyncDevices"
+        android:text="@string/main_sync_device"
+        android:textColor="@color/white_ffffff"
+        android:textSize="15sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.9"
+        app:layout_constraintWidth_percent="0.6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
